--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
                 <li class="nav-item"><a routerLink="/angular-cheat-sheet" class="nav-link active">Angular Cheat Sheet</a></li>
                 <li class="nav-item"><a routerLink="/test-technique" class="nav-link active">Test technique</a></li>
                 <li class="nav-item"><a routerLink="/heroes" class="nav-link active">Heroes</a></li>
+                <li class="nav-item"><a routerLink="/sorare/my-club" class="nav-link active">Sorare Club</a></li>
             </ul>
         </div>
         
