Player infos dialog

--- a/src/app/sorare/my-club/my-club.component.html
+++ b/src/app/sorare/my-club/my-club.component.html
@@ -5,7 +5,7 @@
             <img class="img-thumbnail" src="{{card.pictureUrl}}" alt="{{card.slug}}" />
             <div class="col-md-12">
                 {{card.player.displayName}}
-                <span><i class="bi bi-arrow-up-right-square-fill"></i></span>
+                <span (click)="openPlayerInfos(card.player)"><i class="bi bi-arrow-up-right-square-fill"></i></span>
             </div>
             <div class="row">
                 <div class="col-md-6">{{card.ownerWithRates.from | date:'shortDate'}}</div>
