--- a/src/app/sorare/my-club/player-infos-dialog.html
+++ b/src/app/sorare/my-club/player-infos-dialog.html
@@ -1,13 +1,81 @@
 <div class="container">
-    <div class="row">
-        <h1 mat-dialog-title>{{player.displayName}}</h1>
+    <div class="row text-bg-dark overflow-hidden" style="max-height: 75px;">
+        <div class="col-md-4">
+            <h1 mat-dialog-title class="pt-4">{{player.displayName}}</h1>
+        </div>
+        <div class="col-md-8 overflow-hidden">
+            <img class="modal-header-img" src="{{ player.pictureUrl }}" alt="{{ player.slug }}" />
+        </div>
     </div>
     <div class="row">
-        <div mat-dialog-content>
-            <p>Hello</p>
+        <div class="row gy-1" mat-dialog-content>
+            <!-- <div class="col-md-4"> -->
+                <!-- <img class="img-fluid" src="{{ player.pictureUrl }}" alt="{{ player.slug }}" /> -->
+            <!-- </div> -->
+            <div class="col-md-12">
+                <div class="row gy-1">
+                    <div class="col-md-4"><span>Age:</span>{{ player.age }}</div>
+                    <div class="col-md-4"><span>Position:</span>{{ player.position }}</div>
+                    <div class="col-md-4">
+                        <img class="img-fluid" src="{{ player.country.flagUrl }}" alt="{{ player.country.slug}}" />
+                    </div>
+                    <div class="col-md-6">
+                        <span class="spinner-label">{{ player.lastFiveSo5Appearances / 5 | percent }}</span>
+                        <mat-progress-spinner class="example-margin" [color]="color" [mode]="spinnerMode"
+                            [value]="(player.lastFiveSo5Appearances / 5) * 100  ">
+                        </mat-progress-spinner>
+                    </div>
+                    <div class="col-md-6">
+                        <span class="spinner-label">{{ player.lastFifteenSo5Appearances / 15 | percent }}</span>
+                        <mat-progress-spinner class="example-margin" [color]="color" [mode]="spinnerMode"
+                            [value]="(player.lastFifteenSo5Appearances / 15) * 100  ">
+                        </mat-progress-spinner>
+                    </div>
+                </div>
+                <div class="row gy-2">
+                    <div class="col-md-12">Scorings</div>
+                    <div class="row gy-2">
+                        <div class="col-md-3">So5</div>
+                        <div class="col-md-9">
+                            <div class="progress" role="progressbar" aria-label="SO5Average"
+                                [attr.aria-valuenow]="SO5Average" aria-valuemin="0" aria-valuemax="100"
+                                style="height: 20px">
+                                <div class="progress-bar" style="width: {{SO5Average}}%">{{ SO5Average | number: '2.1-2'
+                                    }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row gy-2">
+                        <div class="col-md-3">So15</div>
+                        <div class="col-md-9">
+                            <div class="progress" role="progressbar" aria-label="SO15Average"
+                                [attr.aria-valuenow]="SO15Average" aria-valuemin="0" aria-valuemax="100"
+                                style="height: 20px">
+                                <div class="progress-bar" style="width: {{SO15Average}}%">{{ SO15Average | number:
+                                    '2.1-2'
+                                    }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row gy-2">
+                        <div class="col-md-3">So50</div>
+                        <div class="col-md-9">
+                            <div class="progress" role="progressbar" aria-label="SO50Average"
+                                [attr.aria-valuenow]="SO50Average" aria-valuemin="0" aria-valuemax="100"
+                                style="height: 20px">
+                                <div class="progress-bar" style="width: {{SO50Average}}%">{{ SO50Average | number:
+                                    '2.1-2'
+                                    }}</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div>{{ SO15Average | number: '2.1-2' }}</div> -->
+                <!-- <div>{{ SO50Average | number: '2.1-2' }}</div> -->
+            </div>
         </div>
-        <div mat-dialog-actions>
+        <!-- <div mat-dialog-actions>
             <button mat-raised-button (click)="onNoClick()">Close</button>
-        </div>
+        </div> -->
     </div>
 </div>
