Rework Nav & Modal

--- a/src/app/sorare/my-club/my-club.component.scss
+++ b/src/app/sorare/my-club/my-club.component.scss
@@ -1,9 +1,12 @@
+.modal-header {
+    max-height: 115px;
+}
 .spinner-label {
     position: absolute;
     margin-top: 40px;
     margin-left: 30px;
 }
 .modal-header-img {
-    float: right;
-    max-width: 15%;
+    max-width: 35%;
+    padding-top: 75px;
 }
