--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
-<h1>{{title}}</h1>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
+        <h1>
+            <i class="bi bi-wrench-adjustable-circle-fill"></i>
+            {{title}}
+        </h1>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a routerLink="/dashboard" class="nav-link active">Dashboard</a></li>
+                <!-- <li class="nav-item"><a routerLink="/dashboard" class="nav-link active">Dashboard</a></li> -->
                 <li class="nav-item"><a routerLink="/angular-cheat-sheet" class="nav-link active">Angular Cheat Sheet</a></li>
-                <li class="nav-item"><a routerLink="/test-technique" class="nav-link active">Test technique</a></li>
-                <li class="nav-item"><a routerLink="/heroes" class="nav-link active">Heroes</a></li>
+                <!-- <li class="nav-item"><a routerLink="/test-technique" class="nav-link active">Test technique</a></li> -->
+                <!-- <li class="nav-item"><a routerLink="/heroes" class="nav-link active">Heroes</a></li> -->
                 <li class="nav-item"><a routerLink="/sorare/my-club" class="nav-link active">Sorare Club</a></li>
             </ul>
         </div>
