--- a/src/app/sorare/my-club/player-infos-dialog.html
+++ b/src/app/sorare/my-club/player-infos-dialog.html
@@ -1,9 +1,13 @@
 <div class="container">
-    <div class="row text-bg-dark overflow-hidden" style="max-height: 75px;">
+    <div class="row position-relative text-bg-dark overflow-hidden modal-header pt-3 pb-3">
         <div class="col-md-4">
-            <h1 mat-dialog-title class="pt-4">{{player.displayName}}</h1>
+            <h1 mat-dialog-title>{{player.displayName}}</h1>
         </div>
-        <div class="col-md-8 overflow-hidden">
+        <div class="col-md-2">
+            <!-- <div>{{ player.activeClub.name }}</div> -->
+            <img class="img-fluid" src="{{ player.activeClub.pictureSecondaryUrl }}" alt="{{ player.activeClub.slug }}" />
+        </div>
+        <div class="col-md-6 overflow-hidden position-absolute start-50 pt-4">
             <img class="modal-header-img" src="{{ player.pictureUrl }}" alt="{{ player.slug }}" />
         </div>
     </div>
@@ -19,18 +23,20 @@
                     <div class="col-md-4">
                         <img class="img-fluid" src="{{ player.country.flagUrl }}" alt="{{ player.country.slug}}" />
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-3">
                         <span class="spinner-label">{{ player.lastFiveSo5Appearances / 5 | percent }}</span>
                         <mat-progress-spinner class="example-margin" [color]="color" [mode]="spinnerMode"
                             [value]="(player.lastFiveSo5Appearances / 5) * 100  ">
                         </mat-progress-spinner>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-3">
                         <span class="spinner-label">{{ player.lastFifteenSo5Appearances / 15 | percent }}</span>
                         <mat-progress-spinner class="example-margin" [color]="color" [mode]="spinnerMode"
                             [value]="(player.lastFifteenSo5Appearances / 15) * 100  ">
                         </mat-progress-spinner>
                     </div>
+                    <div class="col-md-3"></div>
                 </div>
                 <div class="row gy-2">
                     <div class="col-md-12">Scorings</div>
