Theming + using observables in services

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,11 +33,11 @@ button {
 }
 
 button {
-    background-color: $white;
+    background-color: $darkIndigo;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    color: $black;
+    color: $lightGrey;
     font-size: 1.2rem;
     padding: 1rem;
     margin-right: 1rem;
