--- a/src/app/assets/theme.scss
+++ b/src/app/assets/theme.scss
@@ -9,4 +9,10 @@ $black: mat.get-color-from-palette($app-primary, 900);
 $lightGrey: mat.get-color-from-palette($app-primary, 50);
 $grey: mat.get-color-from-palette($app-primary, 300);
 $darkGrey: mat.get-color-from-palette($app-primary, 700);
+$lightIndigo: mat.get-color-from-palette($app-accent, 200);
+$darkIndigo: mat.get-color-from-palette($app-accent, 800);
 $indigo: mat.get-color-from-palette($app-accent, 600);
+$red: mat.get-color-from-palette($app-warn, 500);
+$lightRed: mat.get-color-from-palette($app-warn, 300);
+$darkRed: mat.get-color-from-palette($app-warn, 800);
+$glowRed: mat.get-color-from-palette($app-warn, 'A400');
