--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-primary mb-3">
     <div class="container-fluid">
         <h1>
             <i class="bi bi-wrench-adjustable-circle-fill"></i>
@@ -13,9 +13,7 @@
                 <li class="nav-item"><a routerLink="/sorare/my-club" class="nav-link active">Sorare Club</a></li>
             </ul>
         </div>
-        
     </div>
-
 </nav>
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
