--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,16 +2,19 @@
 @import './assets/theme.scss';
 
 
-html, body { height: 100%; }
+html,
+body {
+    height: 100%;
+}
 
 body {
-    background-color: $lightGrey;
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: $grey;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 h1 {
-    color: $indigo;
+    color: $lightGrey;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
 }
@@ -32,8 +35,16 @@ button {
     font-family: Cambria, Georgia, serif;
 }
 
+nav {
+    background-color: $greyTeal;
+    
+    i::before {
+        color: $lightGrey;
+    }
+}
+
 button {
-    background-color: $darkIndigo;
+    background-color: $darkTeal;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -56,8 +67,22 @@ button:disabled {
     cursor: auto;
 }
 
-i::before{
+i::before {
     color: $black;
+}
+
+/**
+* Mat Tables
+*/
+.mdc-data-table__row:not(.mdc-data-table__row--selected):hover {
+    background-color: $lightGrey !important;
+}
+.mat-mdc-table {
+    .mdc-data {
+        tr.mat-mdc-row:hover {
+            background-color: $lightGrey;
+        }
+    }
 }
 
 /* everywhere else */
