--- a/src/app/sorare/club/club/club.component.html
+++ b/src/app/sorare/club/club/club.component.html
@@ -1,24 +1,25 @@
 <div class="container">
-    <div *ngIf="club$ | async as club; else loading" class="row justify-content-between">
+    <div *ngIf="club$ | async as club; else clubCardsLoading" class="row justify-content-between">
         <mat-card class="col-md-5">
             <mat-card-header>
-                <div mat-card-avatar class="header-image"></div>
+                <div mat-card-avatar class="header-image" style="background-image: url({{ club.pictureUrl }})"></div>
                 <mat-card-title>{{ club.name }}</mat-card-title>
                 <mat-card-subtitle>{{ club.domesticLeague.displayName }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <div *ngIf="players$ | async as players">
-                    <!-- <button (click)="log(players)">Log</button> -->
+                <div *ngIf="players$ | async as clubCardPlayers">
                     <i class="bi bi-person"></i>
-                    <div class="d-inline-block">{{ players.length }}</div>
-                    <div>{{ positionCounts.defenders }}</div>
+                    <div class="d-inline-block">{{ clubCardPlayers.length }}</div>
+                    <div class="col-md-12">GK: {{ positionCounts.goalkeepers }} | DEF: {{ positionCounts.defenders }} |
+                        MID: {{ positionCounts.midfielders }} | FWD: {{ positionCounts.forwards }}</div>
                 </div>
             </mat-card-content>
         </mat-card>
 
         <mat-card class="col-md-5">
             <mat-card-header>
-                <div mat-card-avatar class="header-image"></div>
+                <div mat-card-avatar class="header-image"
+                    style="background-image: url({{ club.domesticLeague.logoUrl }})"></div>
                 <mat-card-title>{{ club.domesticLeague.displayName }}</mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
@@ -26,10 +27,60 @@
                 <div>{{ competition.name }}</div>
             </mat-card-content>
         </mat-card>
-
         <!-- <button (click)="log(club)">Log</button> -->
     </div>
-    <ng-template #loading>
+    <ng-template #clubCardsLoading>
+        Loading ...
+    </ng-template>
+    <div *ngIf="players$ | async as players; else playersCardLoading" class="row mt-3 mb-3">
+        <mat-card class="col-md-12">
+            <mat-card-header>
+                <mat-card-title><i class="bi bi-person"></i>Players</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <!-- <button (click)="log(playersSource)">Log</button> -->
+                <table mat-table [dataSource]="playersSource" matSort matSortDisableClear matSortActive="position"
+                    matSortDirection="asc" (matSortChange)="sortData()">
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="position">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Position</th>
+                        <td mat-cell *matCellDef="let player"> {{ player.position }} </td>
+                    </ng-container>
+
+                    <!-- Player Image -->
+                    <ng-container matColumnDef="pictureUrl">
+                        <th mat-header-cell *matHeaderCellDef></th>
+                        <td mat-cell *matCellDef="let player">
+                            <!-- <img class="img" src="{{ player.pictureUrl }}" /> -->
+                            <div mat-card-avatar class="header-image matTable-image" style="background-image: url({{ player.pictureUrl }})"></div>
+                        </td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="displayName">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                        <td mat-cell *matCellDef="let player"> {{ player.displayName }} </td>
+                    </ng-container>
+
+                    <!-- Last 5 Column -->
+                    <ng-container matColumnDef="lastFiveSo5Appearances">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> % 5 last GW </th>
+                        <td mat-cell *matCellDef="let player"> {{ player.lastFiveSo5Appearances }} </td>
+                    </ng-container>
+
+                    <!-- Last 15 Column -->
+                    <ng-container matColumnDef="lastFifteenSo5Appearances">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> % 15 last GW </th>
+                        <td mat-cell *matCellDef="let player"> {{ player.lastFifteenSo5Appearances }} </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <ng-template #playersCardLoading>
         Loading ...
     </ng-template>
 </div>
