--- a/src/app/sorare/club/club/club.component.scss
+++ b/src/app/sorare/club/club/club.component.scss
@@ -1,4 +1,7 @@
 .header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+  background-size: cover;
+}
+
+.matTable-image {
+  margin-bottom: 0;
+}
