--- a/src/app/sorare/player/player-infos-modal/player-infos-modal.component.scss
+++ b/src/app/sorare/player/player-infos-modal/player-infos-modal.component.scss
@@ -1,4 +1,7 @@
 @import './../../../assets/theme.scss';
+// .modal-container {
+//     background-color: $grey;
+// }
 .modal-header {
     max-height: 115px;
 }
