--- a/src/app/sorare/my-club/my-club.component.html
+++ b/src/app/sorare/my-club/my-club.component.html
@@ -1,17 +1,45 @@
 <div class="container">
-    <h2>My Sorare cards</h2>
     <div class="row">
-        <div *ngFor="let card of this.cards" class="col-md-2">
-            <img class="img-thumbnail" src="{{card.pictureUrl}}" alt="{{card.slug}}" />
-            <div class="col-md-12">
-                {{card.player.displayName}}
-                <span (click)="openPlayerInfos(card.player)"><i class="bi bi-arrow-up-right-square-fill"></i></span>
-            </div>
-            <div class="row">
-                <div class="col-md-6">{{card.ownerWithRates.from | date:'shortDate'}}</div>
-                <div *ngIf="card.ownerWithRates.price > 0" class="col-md-6">{{card.ownerWithRates.price | weiConvert }} Ξ</div>
-            </div>
-        </div>
+        <mat-card class="col-md-12">
+            <mat-card-header>
+                <mat-card-title><i class="bi bi-person"></i> My Sorare cards</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <div class="row cards-filter-row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <mat-form-field>
+                                    <mat-label>Rarity</mat-label>
+                                    <mat-select #rarityFilter class="col-md-2">
+                                        <mat-option *ngFor="let rarity of rarityFilters" [value]="rarity.value">
+                                            {{ rarity.viewValue }}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-1">
+                                <button (click)="filterCardsByRarity(rarityFilter.value)">Apply</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div *ngFor="let card of this.filteredCards" class="col-md-2">
+                        <img class="img-thumbnail" src="{{card.pictureUrl}}" alt="{{card.slug}}" />
+                        <div class="col-md-12">
+                            {{card.player.displayName}}
+                            <span (click)="openPlayerInfos(card.player)"><i
+                                    class="bi bi-arrow-up-right-square-fill"></i></span>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">{{card.ownerWithRates.from | date:'shortDate'}}</div>
+                            <div *ngIf="card.ownerWithRates.price > 0" class="col-md-6">{{card.ownerWithRates.price |
+                                weiConvert }} Ξ</div>
+                        </div>
+                    </div>
+                </div>
+            </mat-card-content>
+        </mat-card>
     </div>
-
 </div>
