Update vendors, log errors w/Ngrx

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,11 @@
                 <!-- <li class="nav-item"><a routerLink="/test-technique" class="nav-link active">Test technique</a></li> -->
                 <!-- <li class="nav-item"><a routerLink="/heroes" class="nav-link active">Heroes</a></li> -->
                 <li class="nav-item"><a routerLink="/sorare/my-club" class="nav-link active">Sorare Club</a></li>
+                <li class="nav-item"><a routerLink="/sorare/learning" class="nav-link active">Learning</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <router-outlet></router-outlet>
+<app-error-component></app-error-component>
 <!-- <app-messages></app-messages> -->
