Login form component
No interaction for now

--- a/src/app/error-component/error-component.component.html
+++ b/src/app/error-component/error-component.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="toast-body">
                 <small>Stack trace here, maybe...</small>
-                <button (click)="clearError(error)">Dismiss</button>
+                <button (click)="clearError(error)">Fermer</button>
             </div>
         </div>
     </div>
