--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                     <mat-form-field class="col-md-12">
                         <mat-label>Mot de passe</mat-label>
                         <input matInput [(ngModel)]="user.password" [formControl]="passwordFC"
-                            [type]="hidePassword ? 'password' : 'text'" name="password" required>
+                            [type]="hidePassword ? 'password' : 'text'" name="password" (blur)="encryptPassword()" required>
                         <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" class="hide-icon-button"
                             [attr.aria-label]="'Cacher mot de passe'">
                             <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
