Auth Interceptor + lost password component
Miss api call to reset password

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,8 +62,8 @@ button:hover {
 }
 
 button:disabled {
-    background-color: $white;
-    color: $lightGrey;
+    background-color: $darkGrey;
+    color: $white;
     cursor: auto;
 }
 
