--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,28 +1,36 @@
 <div class="container mt-3">
     <div class="row justify-content-md-center">
         <div class="col-md-12">
-            <p id="lost-password-text" class="text-center" (click)="hideForm = !hideForm">
-                <small>Mot de passe oublié?</small>
+            <p id="lost-password-text" class="text-center" (click)="isFormHidden = !isFormHidden">
+                <small>{{mail}} Mot de passe oublié?</small>
             </p>
         </div>
     </div>
-    <div *ngIf="!hideForm" class="row justify-content-md-center">
+    <div *ngIf="!isFormHidden" class="row justify-content-md-center">
         <!-- <div class="col-md-6">{{ mail }}</div> -->
         <div class="d-flex justify-content-end">
-            <mat-slide-toggle [(ngModel)]="slideToggle"></mat-slide-toggle>
+            <mat-slide-toggle [(ngModel)]="isSlideToggleActivated"></mat-slide-toggle>
         </div>
         <form (ngSubmit)="onSubmit()">
             <mat-form-field class="col-md-12">
-                    <mat-label>Nouveau Mot de passe</mat-label>
+                <mat-label>Nouveau Mot de passe</mat-label>
                 <input matInput [(ngModel)]="user.password" [formControl]="passwordFC"
-                    [type]="hidePassword ? 'password' : 'text'" name="password" (blur)="encryptPassword()" required>
-                <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" class="hide-icon-button"
-                    [attr.aria-label]="'Cacher mot de passe'">
-                    <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+                    [type]="isPasswordHidden ? 'password' : 'text'" name="password" (blur)="encryptPassword()" required>
+                <button mat-icon-button matSuffix (click)="isPasswordHidden = !isPasswordHidden"
+                    class="hide-icon-button" [attr.aria-label]="'Cacher mot de passe'">
+                    <mat-icon>{{ isPasswordHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
                 <mat-error *ngIf="passwordFC.invalid">{{ getPasswordErrorMessage() }}</mat-error>
             </mat-form-field>
-            <button type="submit" [disabled]="!loginForm.valid">Modifier le mot de passe</button>
+            <div class="row justify-content-md-center">
+                <div class="col-md-6">
+                    <button type="submit" [disabled]="!loginForm.valid && !isFormSubmitted" id="submit-button">
+                        <small [ngClass]="{'invisible': isFormSubmitted}">Modifier le mot de passe</small>
+                        <span *ngIf="isFormSubmitted" id="loader-span"><mat-spinner color="white" diameter="22"></mat-spinner></span>
+                    </button>
+                </div>
+            </div>
+
         </form>
     </div>
 </div>
